--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Poetry'
 - !lcsh 'Angels in art'
 - !lcsh 'Mary, Blessed Virgin, Saint -- Art'
+- GITenberg
 title: 'The Angel of Thought and Other Poems
 
   Impressions from Old Masters'
